compiler-core/src/type_/tests/snapshots/rakun_core__type___tests__errors__generic_record_update2.snap
---
source: compiler-core/src/type_/tests/errors.rs
assertion_line: 1694
expression: "\npub record Box<a> {\n  Box(value: a, i: Int)\n}\npub fn update_box(box: Box<a>, value: b) {\n  Box(..box, value: value)\n}"
---
----- SOURCE CODE

pub record Box<a> {
  Box(value: a, i: Int)
}
pub fn update_box(box: Box<a>, value: b) {
  Box(..box, value: value)
}

----- ERROR
error: Type mismatch
  ┌─ /src/one/two.rakun:6:21
  │
6 │   Box(..box, value: value)
  │                     ^^^^^

Expected type:

    a

Found type:

    b
