compiler-core/src/type_/tests/snapshots/rakun_core__type___tests__errors__hint_for_method_call.snap
---
source: compiler-core/src/type_/tests/errors.rs
assertion_line: 2036
expression: "\npub record User {\n  User(id: Int, name: String)\n}\n\npub fn main(user: User) {\n  user.login()\n}\n"
---
----- SOURCE CODE

pub record User {
  User(id: Int, name: String)
}

pub fn main(user: User) {
  user.login()
}


----- ERROR
error: Unknown record field
  ┌─ /src/one/two.rakun:7:7
  │
7 │   user.login()
  │       ^^^^^^ This field does not exist

The value being accessed has this type:

    User

It has these accessible fields:

    .id
    .name

Rakun is not object oriented, so if you are trying to call a method on this
value you may want to use the function syntax instead.

    login(value)
