compiler-core/src/type_/tests/snapshots/rakun_core__type___tests__errors__inferred_variant_record_update_change_type_parameter_different_branches.snap
---
source: compiler-core/src/type_/tests/errors.rs
expression: "\npub record Box<a> {\n  Locked(password: String, value: a)\n  Unlocked(password: String, value: a)\n}\n\npub fn main() {\n  let box = Locked(\"ungu€$$4bLe\", 11)\n  case box {\n    Locked(..) as box -> Locked(..box, value: True)\n    Unlocked(..) as box -> Unlocked(..box, password: \"pwd\")\n  }\n}\n"
---
----- SOURCE CODE

pub record Box<a> {
  Locked(password: String, value: a)
  Unlocked(password: String, value: a)
}

pub fn main() {
  let box = Locked("ungu€$$4bLe", 11)
  case box {
    Locked(..) as box -> Locked(..box, value: True)
    Unlocked(..) as box -> Unlocked(..box, password: "pwd")
  }
}


----- ERROR
error: Type mismatch
   ┌─ /src/one/two.rakun:10:47
   │
10 │     Locked(..) as box -> Locked(..box, value: True)
   │                                               ^^^^

Expected type:

    Int

Found type:

    Bool
